[package]
name = "anthill-di"
version = "1.2.2"
authors = ["Vidrochka <Evgenuy1605@yandex.ru>"]
edition = "2018"
description = "Rust di containers system"
license = "MIT"
homepage = "https://github.com/Vidrochka/anthill-di"
repository = "https://github.com/Vidrochka/anthill-di"
keywords = ["anthill", "di", "anthill-di", "dependency-injection", "build"]

[dependencies]
async-trait-with-sync = "0.1.36"
tokio = { version = "1.15.0", features = ["full"] }
derive-new = "0.5.9"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["async_tokio"] }

[[bench]]
name = "single_transient"
harness = false